--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ li {
 
 /* -------------------- COLLECTION -------------------- */
 .collection {
-  background-color: #fad5c4;
+  background: linear-gradient(#fad5c4 50%, white);
 }
 
 .title {
@@ -222,6 +222,7 @@ li {
 
   .collection-item img {
     width: 350px;
+    object-fit: cover;
   }
 
   .collection-info h4 {
@@ -308,6 +309,7 @@ li {
 
   .product-item {
     width: 100%;
+    margin: 0;
   }
 
   .section-bottom {
